Add self-hosting, secure auth, PiP UI, and settings
Introduces .env.example and .npmignore for configuration and packaging. Adds interactive self-hosting setup (bin/setup.js), secure encrypted auth storage (lib/secure-storage.js), and token refresh/logout edge functions with Supabase migrations. Enhances authentication with token refresh and server-side logout, updates config loading for shared/custom instances, and improves the web UI with picture-in-picture mode and appearance customization. Updates documentation for security, self-hosting, and new commands.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Dependencies
 node_modules/
 
+#Issue Resolution Files
+ISSUE_*_RESOLUTION.md
+SECURITY_ISSUES.md
+SECURITY.md
+
 # Logs
 *.log
 npm-debug.log*
@@ -31,9 +36,9 @@ build/
 .DS_Store
 Thumbs.db
 
-# Environment
+# Environment variables
+# NOTE: .env.example is committed as a template for self-hosted instances
 .env
-.env.example
 .env.local
 .env.*.local
 
@@ -41,5 +46,5 @@ Thumbs.db
 # package-lock.json
 # yarn.lock
 
-# Dev-timr data files (these are project-specific, not for the tool itself)
-# .dev-clock.json
+# Dev-timr data files (user-specific tracking data)
+.dev-clock.json
