--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-timr-init": "./bin/init.js",
     "dev-timr-login": "./bin/login.js",
     "dev-timr-stats": "./bin/stats.js",
-    "dev-timr-migrate": "./bin/migrate.js"
+    "dev-timr-migrate": "./bin/migrate.js",
+    "dev-timr-setup": "./bin/setup.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,6 +28,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "chalk": "^5.3.0",
     "cross-spawn": "^7.0.3",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "inquirer": "^9.2.12",
     "open": "^10.0.3",
